[package]
name = "bench-graph"
version = "0.1.0"
edition = "2024"

[[bench]]
# name = "Graph Instantiation by Random Input with Size"
name = "bench"
path = "benches/bench.rs"
harness = false

[dependencies]
tracing = "0.1.44"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"
rand = "0.9.2"
tracing-subscriber = "0.3.22"
